# fastbencode

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  MANIFEST.in  PKG-INFO  README.md  SECURITY.md  disperse.conf  disperse.toml  pyproject.toml  releaser.conf  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml  wheels.yaml
debian/: changelog  control  copyright  watch
debian/upstream/: metadata  signing-key.asc
fastbencode/: __init__.py  _bencode_py.py  _bencode_pyx.pyi  _bencode_pyx.pyx  bencode.py  python-compat.h  test__bencode.py
fastbencode.egg-info/: SOURCES.txt  requires.txt  top_level.txt
fastbencode/tests/: __init__.py  test_bencode.py
src/: lib.rs
tests/: __init__.py  test_bencode.py
