[package]
name = "fastbencode"
version = "0.3.2"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
license = "GPL-2.0-or-later"
description = "Implementation of bencode with Rust implementation"
readme = "README.md"
repository = "https://github.com/breezy-team/fastbencode"

[lib]
name = "fastbencode__bencode_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"] }
pyo3-ffi = "0.24.2"
