[package]
name = "fastbencode"
version = "0.3.4"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
license = "Apache-2.0"
description = "Implementation of bencode with Rust implementation"
readme = "README.md"
repository = "https://github.com/breezy-team/fastbencode"

[lib]
name = "fastbencode__bencode_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
