[build-system]
requires = [
    "setuptools>=61.2",
    "cython>=0.29",
]
build-backend = "setuptools.build_meta"

[project]
name = "fastbencode"
description = "Implementation of bencode with optional fast C extensions"
maintainers = [{name = "Breezy Developers", email = "breezy-core@googlegroups.com"}]
readme = "README.md"
license = {text = "GPLv2 or later"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = []

[project.urls]
Homepage = "https://github.com/breezy-team/fastbencode"
GitHub = "https://github.com/breezy-team/fastbencode"

[project.optional-dependencies]
cext = ["cython>=0.29"]
dev = [
    "ruff==0.11.2"
]

[tool.setuptools]
packages = ["fastbencode"]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "fastbencode.__version__"}

[tool.ruff]
target-version = "py37"
line-length = 79

[tool.ruff.lint]
select = [
    "ANN",
    "D",
    "E",
    "F",
    "I",
    "UP",
]
ignore = [
    "ANN001",
    "ANN002",
    "ANN201",
    "ANN202",
    "ANN204",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
