[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools-rust>=1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "fastbencode"
description = "Implementation of bencode with optional fast Rust extensions"
maintainers = [{name = "Breezy Developers", email = "breezy-core@googlegroups.com"}]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[project.urls]
Homepage = "https://github.com/breezy-team/fastbencode"
GitHub = "https://github.com/breezy-team/fastbencode"

[project.optional-dependencies]
rust = ["setuptools-rust>=1.0.0"]
dev = [
    "ruff==0.15.1"
]

[tool.setuptools]
packages = ["fastbencode"]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "fastbencode.__version__"}

[tool.ruff]
target-version = "py37"
line-length = 79

[tool.ruff.lint]
select = [
    "ANN",
    "D",
    "E",
    "F",
    "I",
    "UP",
]
ignore = [
    "ANN001",
    "ANN002",
    "ANN201",
    "ANN202",
    "ANN204",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.cibuildwheel]
environment = {PATH="$HOME/.cargo/bin:$PATH"}
before-build = "pip install -U setuptools-rust && curl https://sh.rustup.rs -sSf | sh -s -- --profile=minimal -y && rustup show"

[tool.cibuildwheel.linux]
skip = "*-musllinux_* *cp314*"
archs = ["auto", "aarch64"]
before-build = "pip install -U setuptools-rust && yum -y install libatomic && curl https://sh.rustup.rs -sSf | sh -s -- --profile=minimal -y && rustup show"

[tool.cibuildwheel.macos]
archs = ["auto", "universal2", "x86_64", "arm64"]
before-all = "rustup target add x86_64-apple-darwin aarch64-apple-darwin"
skip = """\
    cp39-macosx_x86_64 cp39-macosx_universal2 \
    cp310-macosx_x86_64 cp310-macosx_universal2 \
    cp311-macosx_x86_64 cp311-macosx_universal2 \
    cp312-macosx_x86_64 cp312-macosx_universal2 \
    cp313-macosx_x86_64 cp313-macosx_universal2 \
    cp314-macosx_x86_64 cp314-macosx_universal2 \
    """
