[metadata]
name = fastbencode
description = Implementation of bencode with optional fast C extensions
maintainer = Breezy Developers
maintainer_email = breezy-core@googlegroups.com
url = https://github.com/breezy-team/fastbencode
long_description = file:README.md
license = GPLv2 or later
version = attr:fastbencode.__version__
project_urls =
    GitHub = https://github.com/breezy-team/fastbencode

[options]
packages = fastbencode
setup_requires =
    cython>=0.29

[options.extras_require]
cext = cython>=0.29
