[metadata]
name = fastbencode
description = Implementation of bencode with optional fast C extensions
maintainer = Breezy Developers
maintainer_email = breezy-core@googlegroups.com
url = https://github.com/breezy-team/fastbencode
long_description = file:README.md
license = GPLv2 or later
version = attr:fastbencode.__version__
project_urls =
    GitHub = https://github.com/breezy-team/fastbencode
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows

[options]
python_requires = >=3.7
packages = fastbencode
setup_requires =
    cython>=0.29

[options.extras_require]
cext = cython>=0.29
